
  o Server Changes:
    * Added paranoidCommits option which checks trove data has been stored
      properly in the SQL database before allowing the commit to complete.

  o Bug Fixes:
    * Fixed handling of troves erased by an update job which satisfy
      dependencies of packages being installed, so that an error
      message is given instead of an assertion being raised (CNY-2996).

Changes in 2.0.27:
  o New Features:
    * Metadata information can now be extracted from debian packages.
      (CNY-2995)

  o Client Changes:
    * The "conary rollback" command now handles --info and --interactive
      flags, which behave similarly to the "conary update" flags. (CNY-820)

  o Bug Fixes:
    * Conary no longer checks for the existence of a db journal on startup,
      making it possible to perform cvc operations while updating your
      system. (CNY-2958)
    * Files with (only) unsatisfied Java requirements that are filtered
      out using r.Requires(exceptDeps) no longer have their provides
      removed. (CNY-3001)
    * A bug that caused the frozen list of trove script compatibility
      information (created if using the "toClass=" keyword argument
      when adding a trove script) to be recorded in a random order has
      been fixed.  Because sorting the list causes a different Trove
      signature digest to be generated, this version of Conary
      introduces version 2 trove signatures.  Conary will ignore
      version 1 trove signatures on old troves that have multiple
      trove script compatibility entries.  (CNY-2997)
    * Conary ignores journal if the database is currently being locked
      by an update.  Its existence does not signify a failed update,
      but rather a currently running one. (CNY-3008)


  o Build Changes:
    * A new type of metadata information, storing key-value pairs,
      is now available. (CNY-2983)

Changes in 2.0.26:
  o Build Changes: